# libaedaemon

./: .gitignore  CMakeLists.txt
arch/: ChangeLog  PKGBUILD  make_source_package.sh
cmake/Modules/: FindApr.cmake  FindAprUtil.cmake
debian/: README  README.Debian  README.source  changelog  control  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  libaedaemon.cron.d.ex  libaedaemon.default.ex  libaedaemon.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/libaedaemon-doc/DEBIAN/: control  md5sums
debian/libaedaemon-doc/usr/share/doc/libaedaemon-doc/: copyright
debian/libaedaemon/DEBIAN/: control  md5sums
debian/libaedaemon/usr/share/doc/libaedaemon/: CMakeLists.txt
debian/tmp/etc/libaedaemon/: README
scripts/: initscript-arch.sh
src/: aprdaemon.c  daemon.c  daemon1.c  main.c
